--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,9 @@ nav a {
 #highlights {
     display: flex;
     justify-content: center;
-    margin: 70px 40px 0px 40px;
+    margin: 0px 40px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 #highlights .container {
@@ -80,4 +82,35 @@ nav a {
     display: inline-flex;
     flex-flow: wrap;
     justify-content: center;
+}
+
+.locations_square {
+    width: 300px;
+    margin: 0 20px;
+    background-color: black;
+    opacity: 1;
+}
+
+.locations_square p, .locations_square h3 {
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+#locations {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    background-image: url(../assets/img-locations-background.jpg);
+    background-size: cover;
+    height: 500px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#locations .spacing {
+    padding-top: 70px;
+}
+
+#locations .rows {
+    margin-top: 3px;
 }
